chore: update user docs
