# app/controller/user.go
@@ -37,7 +37,7 @@ func (u *Users) Init(server *app.HTTPServer) {
 // @Description 取得 user 列表
 // @Accept  json
 // @Produce  json
-// @Success 200 {object} model.User string "ok"
+// @Success 200 {object} model.UserListResponseObject string "ok"
 // @Failure 403 {object} string "err.Error()"
 // @Router /api/v1/users/ [get]
 func (u *Users) GetUsers(c *gin.Context) {
@@ -62,7 +62,7 @@ func (u *Users) GetUsers(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param userId path string true "user id"
-// @Success 200 {object} model.User string "ok"
+// @Success 200 {object} model.UserResponseObject string "ok"
 // @Failure 404 {object}  string "record not found"
 // @Router /api/v1/users/:userId [get]
 func (u *Users) GetUserByUserId(c *gin.Context) {
@@ -139,7 +139,7 @@ func (u *Users) PostUser(c *gin.Context) {
 // @Produce  json
 // @Param userId path string true "user id"
 // @Param body body model.UpdateUserBody true "參數"
-// @Success 200 {object} model.User string "ok"
+// @Success 200 {object} model.RowsAffectedModel string "ok"
 // @Router /api/v1/users/:userId [patch]
 func (u *Users) UpdateUserByUserId(c *gin.Context) {
 	var user model.User
@@ -147,24 +147,27 @@ func (u *Users) UpdateUserByUserId(c *gin.Context) {
 	database := u.app.Database.GetDb()
 	userId := c.Params.ByName("userId")
 
-	if err := database.Where("id = ?", userId).First(&user).Error; err != nil {
+	err := database.Where("id = ?", userId).First(&user).Error
+	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Record not found!"})
 		return
 	}
 
-	if err := c.ShouldBindJSON(&body); err != nil {
+	err = c.ShouldBindJSON(&body)
+	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
-	if err := database.Model(&user).Update(body).Error; err != nil {
+	updateResult := database.Model(&user).Update(body)
+	if updateResult.Error != nil {
 		c.JSON(http.StatusForbidden, gin.H{"error": err.Error()})
 		fmt.Println(err.Error())
 		return
 	}
 
 	c.JSON(http.StatusOK, gin.H{
-		"data": &user,
+		"data": updateResult.RowsAffected,
 	})
 
 }
@@ -175,7 +178,7 @@ func (u *Users) UpdateUserByUserId(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param userId path string true "user id"
-// @Success 200 {object} model.User string "ok"
+// @Success 200 {object} model.RowsAffectedModel "success"
 // @Router /api/v1/users/:userId [delete]
 func (u *Users) DeleteUserByUserId(c *gin.Context) {
 	var user model.User
@@ -191,7 +194,7 @@ func (u *Users) DeleteUserByUserId(c *gin.Context) {
 	result := database.Delete(&user)
 
 	c.JSON(http.StatusOK, gin.H{
-		"data": result,
+		"data": result.RowsAffected,
 	})
 
 }
