# app/model/user.go
@@ -1,5 +1,7 @@
 package model
 
+import "encoding/json"
+
 type User struct {
 	BaseModel
 	Nickname         string   `gorm:"type:varchar(128);not null"`
@@ -8,6 +10,14 @@ type User struct {
 	PhoneNumber      string   `gorm:"column:phoneNumber;type:varchar(32)"`
 	Gender           string   `gorm:"column:gender;type:varchar(16)"`
 	Region           string   `gorm:"type:varchar(32)"`
+}
+
+type UserResponseObject struct {
+	Data User
+}
+
+type UserListResponseObject struct {
+	Data []User
 }
 
 type CreateUserBody struct {
@@ -23,4 +33,15 @@ type CreateUserBody struct {
 type UpdateUserBody struct {
 	Nickname string `json:"nickname,omitempty"`
 	Birthday string `json:"birthday,omitempty"`
+}
+
+func (t User) MarshalJSON() ([]byte, error) {
+	type TmpJSON User
+	return json.Marshal(&struct {
+		TmpJSON
+		Birthday DateTime `json:"birthday"`
+	}{
+		TmpJSON:  (TmpJSON)(t),
+		Birthday: DateTime(t.Birthday),
+	})
 }
