# docs/swagger.json
@@ -32,7 +32,7 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/model.UserListResponseObject"
                         }
                     },
                     "403": {
@@ -102,7 +102,7 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/model.UserResponseObject"
                         }
                     },
                     "404": {
@@ -136,9 +136,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "success",
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/model.RowsAffectedModel"
                         }
                     }
                 }
@@ -177,7 +177,7 @@
                     "200": {
                         "description": "ok",
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/model.RowsAffectedModel"
                         }
                     }
                 }
@@ -223,6 +223,16 @@
                 }
             }
         },
+        "model.RowsAffectedModel": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "integer",
+                    "format": "int64",
+                    "example": 1
+                }
+            }
+        },
         "model.UpdateUserBody": {
             "type": "object",
             "properties": {
@@ -263,6 +273,25 @@
                 },
                 "updatedAt": {
                     "type": "string"
+                }
+            }
+        },
+        "model.UserListResponseObject": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.User"
+                    }
+                }
+            }
+        },
+        "model.UserResponseObject": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/model.User"
                 }
             }
         }
